# packages

./: .gitignore  .tool-versions  create-release.sh  pyproject.toml
src/packages_test/: __init__.py
src/packages_test/package_b/: __init__.py
