[project]
name = "packages-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jens Peder Meldgaard", email = "jpm@halfspace.io" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
packages-test = "packages_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
